--- a/public/web/src/app/views/activity/work/work.less
+++ b/public/web/src/app/views/activity/work/work.less
@@ -1,6 +1,17 @@
-.activity-work {
-    width: 1080px;
+#_activityList {
+    width: 1100px;
     margin: 0 auto 0;
+}
+#_activityList>div>div {
+	display: inline-block;
+}
+_activityList>div {
+	position: relative;
+}
+.container {
+	position: relative;
+}
+.activity-work {
 	.work-content {
 		.work-card {
 		    width: 330px;
