--- a/public/web/src/app/views/channel/ask/ask.less
+++ b/public/web/src/app/views/channel/ask/ask.less
@@ -1,6 +1,6 @@
 .channel-ask {
     width: 880px;
-    margin: 30px auto 0 50px;
+    margin: 0 auto 30px 50px;
     float: left;
 	.work-content {
 		.work-card {
