--- a/public/web/src/app/views/channel/header/header.less
+++ b/public/web/src/app/views/channel/header/header.less
@@ -1,8 +1,10 @@
 .channel-header {
 	width: 1080px;
 	margin: 20px auto;
+	height: 300px;
 	.header-content {
 	    float: right;
+	    margin-bottom: 20px;
 		.header {
 		    width: 865px;
 		    height: 280px;
