--- a/public/web/src/app/views/channel/work/work.less
+++ b/public/web/src/app/views/channel/work/work.less
@@ -1,6 +1,6 @@
 .channel-work {
     width: 880px;
-    margin: 30px auto 0 50px;
+    margin:  0 auto 30px 50px;
     float: left;
     .card-section {
 	    border: 1px solid;
