--- a/public/web/src/app/views/index/starHeader/starHeader.html
+++ b/public/web/src/app/views/index/starHeader/starHeader.html
@@ -1,8 +1,7 @@
-<div class="index-hotHeader clearfix">
-	<div class="hot-nav">
-		<div class="hot">
-			<i class="hot-icon"></i>
-			热门
+<div class="index-starHeader clearfix">
+	<div class="star-nav">
+		<div class="star">
+			PS大神
 		</div>
 	</div>
 </div>
