--- a/public/web/src/app/views/index/starHeader/starHeader.less
+++ b/public/web/src/app/views/index/starHeader/starHeader.less
@@ -1,21 +1,15 @@
-.index-hotHeader {
+.index-starHeader {
     width: 1096px;
     margin: 20px auto 0;
-	.hot-nav {
+	.star-nav {
 	    height: 85px;
 	    line-height: 85px;
-		.hot {
+		.star {
 		    font-size: 20px;
 			color: #b9b8be;
 			margin-left: 10px;
-			.hot-icon {
-				background: url('/web/img/hot_gray.png') no-repeat;
-			    display: inline-block;
-			    width: 22px;
-			    height: 23px;
-			    vertical-align: sub;
-		        background-position: 4px 2px;
-			}
+		    text-align: center;
+
 		}
 	}
 }
