--- a/public/web/src/less/common.less
+++ b/public/web/src/less/common.less
@@ -86,7 +86,7 @@ input::-webkit-input-placeholder {
 }
 .grid-item {
     float: left;
-    width: 47%;
+    width: 30%;
     margin: 0 1.5% 3%;
 }
 .grid {
@@ -152,13 +152,15 @@ input::-webkit-input-placeholder {
             background: #fff;
             padding: 20px 60px;
         .header {
+            .login-press {
+                border-bottom: 2px solid #f9d160;
+            }
             .login-btn {
                 color: #53515c;
                 font-size: 19px;
                 display: inline-block;
                 width: 50px;
                 text-align: center;
-                border-bottom: 2px solid #f9d160;
             }
             .register-btn {
                 font-size: 19px;
@@ -314,13 +316,15 @@ input::-webkit-input-placeholder {
             background: #fff;
             padding: 20px 60px;
         .header {
+            .login-press {
+                border-bottom: 2px solid #f9d160;
+            }
             .login-btn {
                 color: #53515c;
                 font-size: 19px;
                 display: inline-block;
                 width: 50px;
                 text-align: center;
-                border-bottom: 2px solid #f9d160;
             }
             .register-btn {
                 font-size: 19px;
