--- a/public/web/src/app/views/activity/header/header.less
+++ b/public/web/src/app/views/activity/header/header.less
@@ -6,12 +6,28 @@
 	    width: 1082px;
 	    overflow: hidden;
 	    height: 320px;
-	    background: url('http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg');
+	    position: relative;
+	    .shadow {
+		    position: absolute;
+		    top: 0;
+		    left: 0;
+		    width: 100%;
+		    height: 100%;
+		    z-index: 0;
+		    filter: url(blur.svg#blur);
+		    -webkit-filter: blur(40px);
+		    -moz-filter: blur(40px);
+		    -ms-filter: blur(40px);
+		    filter: blur(40px);
+		    filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius=40, MakeShadow=false);
+	    }
 		.header-content {
 		    margin: 0 auto;
 		    width: 625px;
 		    overflow: hidden;
 		    height: 320px;
+		    position: relative;
+		    z-index: 999;
 			.banner {
 			    margin: 0 auto;
 			    width: 625px;
@@ -93,6 +109,9 @@
 		    font-size: 20px;
 		    right: 20px;
 		    top: 0;
+		    -webkit-box-shadow: 0 0 10px 15px #fac656;
+		    -moz-box-shadow: 0 0 10px 15px #fac656;
+		    box-shadow: 0px 4px 0px 0px #fac656;
 		}
 	}
 }
