--- a/public/web/src/app/views/index/star/star.less
+++ b/public/web/src/app/views/index/star/star.less
@@ -1,118 +1,101 @@
-#_hotList {
-    width: 1115px;
+#_starList {
+    width: 1152px;
     margin: 20px auto 0;
-
   }
-  #_hotList>div>div {
+  #_starList>div>div {
   	display: inline-block;
   }
-	.hot-content {
-		.card-list:hover {
-			width: 259px;
-		    -webkit-box-shadow: 0 0 10px rgba(0, 204, 204, .5) black, 0 0 10px 20px red;
-		    -moz-box-shadow: 0 0 10px 5px black, 0 0 10px 20px red;
-		    /* box-shadow: 0 0 26px -8px black, 0 0 53px -10px yellow; */
-		    box-shadow: 0 2px 13px #f6e1b8;
-		};
-		.card-list:hover .foot-message {
-			border: 0px;
-		}
-		.card-list {
-		    width: 258px;
-		    float: left;
-		    height: 318px;
-		    overflow: hidden;
-		    border-radius: 3px;
-	        margin: 0 10px 40px;
-			.image-block {
-	    	    position: relative;
-			    height: 254px;
-			    overflow: hidden;
-			    line-height: 254px;
-				.tag-icon {
-					background: url('/web/img/shadow.png') no-repeat;
-				    display: inline-block;
-				    width: 36px;
-				    height: 30px;
-				    vertical-align: sub;
-				    position: absolute;
-				    right: 0px;
-				    top: 15px;
-				    font-size: 12px;
-				    color: #fff;
-				    line-height: 29px;
-				    padding-left: 12px;
-				}
-				img {
-					width: 100%;
-					vertical-align: middle;
-				}
-			}
-			.foot-message {
-				position: relative;
-			    height: 62px;
-			    border-bottom: 1px solid #ededed;
-			    border-radius: 0 0 5px 5px;
-			    border-left: 1px solid #ededed;
-			    border-right: 1px solid #ededed;
-				.user-message {
-				    position: absolute;
-				    width: 45px;
-				    top: -20px;
-				    left: 10px;
-					.user-avatar {
-						display: inline-block;
-					    width: 40px;
-					    height: 40px;
-					    overflow: hidden;
-					    border-radius: 10px;
-					    border: 2px solid #fff;
-						img {
-							width: 100%;
-						}
-					}
-					.user-name {
-					    font-size: 14px;
-					    float: left;
-					    width: 100px;
-					}
-				}
-				.like-block {
-					float: right;
-					width: 50px;
-					font-size: 14px;
-					.like-icon {
-						background: url('/web/img/like_gray.png') no-repeat;
-					    display: inline-block;
-					    width: 50px;
-					    height: 30px;
-					    background-position: 17px 15px;
-					}
-					.like-count {
-					    display: inline-block;
-					    width: 100%;
-					    text-align: center;
-					    color: #cccccc;
-					}
-				}
-				.comment-block {
-					float: right;
-					width: 50px;
-					font-size: 14px;
-					.comment-icon {
-						background: url('/web/img/comment.png') no-repeat;
-					    display: inline-block;
-					    width: 50px;
-					    height: 30px;
-					    background-position: 17px 15px;
-					}
-					.comment-count {
-					    display: inline-block;
-					    width: 100%;
-					    text-align: center;
-					    color: #cccccc;
-					}
-				}
-			}
-		}
-	}
+
+.star-content {
+    width: 315px;
+    height: 500px;
+    vertical-align: top;
+    overflow: hidden;
+    margin: 10px 34px;
+    background: #e8e8e8;
+    position: relative;
+    z-index: 999;
+    .follow {
+	    width: 60px;
+	    height: 25px;
+	    font-size: 15px;
+	    color: #fff;
+	    background: #f9d160;
+	    text-align: center;
+	    line-height: 25px;
+	    border-radius: 2px;
+	    float: right;
+	    margin: 15px 20px;
+	        position: relative;
+    z-index: 999;
+    }
+    .shadow {
+		position: absolute;
+	    top: 0;
+	    left: 0;
+	    width: 100%;
+	    height: 100%;
+	    z-index: 0;
+	    filter: url(blur.svg#blur);
+	    -webkit-filter: blur(40px);
+	    -moz-filter: blur(40px);
+	    -ms-filter: blur(40px);
+	    filter: blur(40px);
+	    filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius=40, MakeShadow=false);
+    }
+    .work-show>div {
+	    display: inline-block;
+	    width: 130px;
+	    height: 130px;
+	    margin: 5px 0 5px 18px;
+	    overflow: hidden;
+	    line-height: 130px;
+	        position: relative;
+    z-index: 999;
+    }
+    .work-show img {
+    	width: 100%;
+    	vertical-align: middle;
+    }
+    .avatar {
+		width: 70px;
+	    height: 70px;
+	    overflow: hidden;
+	    border-radius: 50%;
+	    margin: 55px auto 10px;
+	    border: 3px solid #fff;
+	        position: relative;
+    z-index: 999;
+    	img {
+			width: 100%;
+    	}
+    }
+    .name {
+	    text-align: center;
+	    font-size: 16px;
+	    color: #312e3f;
+    	margin-bottom: 10px;
+	        position: relative;
+    z-index: 999;
+    }
+    .work {
+	    display: inline-block;
+	    margin-right: 10px;
+	        position: relative;
+    z-index: 999;
+    }
+    .like {
+	    display: inline-block;
+	    margin-left: 10px;
+	        position: relative;
+    z-index: 999;
+    }
+    .workAndLike {
+	    color: #a8a8a8;
+	    font-size: 14px;
+	    text-align: center;
+        margin-bottom: 10px;
+	        position: relative;
+    z-index: 999;
+    }
+}
